// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`readRefTable Expects to merge correctly the refTable of resources 1`] = `
Object {
  "maxIndex": 19,
  "maxOffset": 19012,
  "offsets": Map {
    0 => 0,
    1 => 19012,
    2 => 19,
    3 => 224,
    4 => 12330,
    5 => 244,
    6 => 11154,
    7 => 11176,
    8 => 11368,
    9 => 11709,
    10 => 11910,
    11 => 11943,
    12 => 12140,
    13 => 12196,
    14 => 18928,
    15 => 12494,
    17 => 13264,
    18 => 18742,
    19 => 18860,
    -1 => 0,
  },
  "startingIndex": 0,
}
`;

exports[`readRefTable Expects to merge correctly the refTable of resources 2`] = `
Object {
  "maxIndex": 21,
  "maxOffset": 25091,
  "offsets": Map {
    0 => 0,
    1 => 25091,
    2 => 19,
    3 => 224,
    4 => 12330,
    5 => 244,
    6 => 11154,
    7 => 11176,
    8 => 11368,
    9 => 11709,
    10 => 11910,
    11 => 11943,
    12 => 12140,
    13 => 12196,
    14 => 18948,
    15 => 12494,
    17 => 13264,
    18 => 18742,
    19 => 25016,
    20 => 19431,
    21 => 24878,
    -1 => 0,
  },
  "startingIndex": 0,
}
`;

exports[`readRefTable Expects to merge correctly the refTable of resources 3`] = `
Object {
  "maxIndex": 25,
  "maxOffset": 72070,
  "offsets": Map {
    0 => 0,
    1 => 15,
    2 => 4075,
    3 => 265,
    4 => 302,
    5 => 27161,
    6 => 55428,
    7 => 72070,
    8 => 378,
    9 => 592,
    10 => 764,
    11 => 4338,
    12 => 4394,
    13 => 4443,
    14 => 26241,
    15 => 26484,
    16 => 26817,
    17 => 27302,
    18 => 54210,
    19 => 54444,
    20 => 55060,
    21 => 55560,
    22 => 71288,
    23 => 71522,
    24 => 71742,
    -1 => 0,
  },
  "startingIndex": 0,
}
`;

exports[`readRefTable Expects to merge correctly the refTable of resources 4`] = `
Object {
  "maxIndex": 63,
  "maxOffset": 63939,
  "offsets": Map {
    0 => 0,
    1 => 53230,
    2 => 19,
    3 => 1785,
    4 => 1806,
    5 => 53757,
    6 => 53068,
    7 => 54181,
    8 => 54601,
    9 => 55043,
    10 => 55415,
    11 => 55817,
    12 => 57359,
    13 => 57859,
    14 => 58430,
    15 => 52999,
    16 => 58970,
    17 => 59969,
    18 => 60584,
    19 => 61203,
    20 => 61822,
    21 => 62441,
    22 => 62885,
    23 => 63408,
    24 => 53500,
    25 => 16564,
    26 => 28824,
    27 => 28847,
    28 => 29043,
    29 => 29414,
    30 => 29642,
    31 => 50764,
    32 => 50787,
    33 => 50978,
    34 => 51493,
    35 => 51848,
    36 => 52014,
    37 => 53132,
    38 => 53600,
    39 => 54024,
    40 => 54445,
    41 => 54886,
    42 => 55259,
    43 => 55631,
    44 => 57203,
    45 => 57702,
    46 => 58071,
    47 => 58274,
    48 => 58781,
    49 => 59610,
    50 => 59813,
    51 => 60225,
    52 => 60428,
    53 => 60844,
    54 => 61047,
    55 => 61463,
    56 => 61666,
    57 => 62082,
    58 => 62285,
    59 => 62701,
    60 => 63251,
    61 => 63625,
    62 => 63939,
    -1 => 0,
  },
  "startingIndex": 0,
}
`;

exports[`readRefTable Expects to merge correctly the refTable of resources 5`] = `
Object {
  "maxIndex": 17,
  "maxOffset": 16812,
  "offsets": Map {
    0 => 0,
    1 => 11997,
    2 => 19,
    3 => 224,
    4 => 12330,
    5 => 244,
    6 => 11154,
    7 => 11176,
    8 => 11368,
    9 => 11709,
    10 => 11910,
    11 => 11943,
    12 => 12140,
    13 => 12196,
    14 => 12429,
    15 => 12494,
    -1 => 0,
    NaN => 16812,
  },
  "startingIndex": 0,
}
`;

exports[`readRefTable Expects to merge correctly the refTable of resources 6`] = `
Object {
  "maxIndex": 14,
  "maxOffset": 4163,
  "offsets": Map {
    0 => 0,
    1 => 4163,
    2 => 4098,
    3 => 4077,
    4 => 3812,
    5 => 3745,
    6 => 3619,
    7 => 15,
    8 => 3504,
    9 => 3439,
    10 => 4001,
    11 => 3932,
    12 => 3957,
    13 => 3982,
    -1 => 0,
  },
  "startingIndex": 0,
}
`;

exports[`readRefTable Expects to merge correctly the refTable of resources 7`] = `
Object {
  "maxIndex": 16,
  "maxOffset": 12494,
  "offsets": Map {
    0 => 0,
    1 => 11997,
    2 => 19,
    3 => 224,
    4 => 12330,
    5 => 244,
    6 => 11154,
    7 => 11176,
    8 => 11368,
    9 => 11709,
    10 => 11910,
    11 => 11943,
    12 => 12140,
    13 => 12196,
    14 => 12429,
    15 => 12494,
    -1 => 0,
  },
  "startingIndex": 0,
}
`;
